https://www.npmjs.com/package/gulp-sass

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "homepage": "https://github.com/pimpinee14/MyGulpProj#readme",
   "devDependencies": {
     "browser-sync": "^2.18.13",
-    "gulp": "^3.9.1"
+    "gulp": "^3.9.1",
+    "gulp-sass": "^3.1.0"
   },
   "dependencies": {
     "gulp-twig": "^1.1.1"
